--- a/HoraDeAventura/Views/Home/Index.cshtml
+++ b/HoraDeAventura/Views/Home/Index.cshtml
@@ -1,6 +1,14 @@
 ﻿@model List<Personagem>
 @{
     ViewData["Title"] = "Página inicial";
+    var Categorias = (List<Categoria>)ViewData["Categorias"];
+    string Cor(string nome)
+    {
+        return Categorias
+            .Where(t => t.Nome == nome)
+            .Select(t => t.Cor)
+            .FirstOrDefault();
+    }
 }
 
 <section class="pt-5 pb-3 text-center container">
@@ -8,22 +16,15 @@
                 <div class="col mx-auto">
                     <h1>Hora de Aventura</h1>
                     <div class="group">
-                        <button id="btn-all" class="btn btn-md my-2 text-white bg-secondary btn-filter">Ver
-                            Todos</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#FFB0DD">Reino Doce</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#6aa9e9">Reino Gelado</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#afcdea">Personagens Principais</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#000000">Outros</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#800000">Entidade cósmica</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#620096">Mágico</button>
-                        <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                            style="background-color:#ffc1d5">Princesas</button>
+                        <button id="btn-all" class="btn btn-md my-2 text-white bg-dark btn-filter">
+                            Ver Todos
+                        </button>
+                        @foreach (var Categoria in Categorias)
+                        {
+                            <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
+                                style="background-color:@Categoria.Cor">@Categoria.Nome
+                            </button>
+                        }
                     </div>
                 </div>
             </div>
@@ -39,13 +40,16 @@
                     <!-- Card Personagem - Inicio -->
                     <div class="col">
                         <div class="card shadow-sm cursor-pointer Personagens Principais" onclick="GetInfo(001)">
-                            <img src="img/personagens/Finn.webp" class="card-img-top" width="100%" height="300"
-                                alt="Finn" />
+                            <img src="@Personagem.Imagem" class="card-img-top" width="100%" height="300" alt="@Personagem.Nome" />
                             <div class="card-body">
-                                <h3 class="card-title">Finn</h3>
+                                <h3 class="card-title">@Personagem.Nome</h3>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <a href="#" class="btn my-2 text-white" style="background-color:#afcdea">Personagens Principais</a>
+                                        @foreach (var tipo in Personagem.Categoria)
+                                        {
+                                            <a href="#" class="btn my-2 text-white" 
+                                            style="background-color:@Cor(tipo)">@tipo</a>
+                                        }
                                     </div>
                                 </div>
                             </div>
