--- a/HoraDeAventura/Views/Shared/_Layout.cshtml
+++ b/HoraDeAventura/Views/Shared/_Layout.cshtml
@@ -7,10 +7,10 @@
     <title>Hora de Aventura | @ViewData["Title"]</title>
 
 <!-- Favicons -->
-    <link rel="apple-touch-icon" href="img/favicons/apple-touch-icon.png" sizes="180x180">
-    <link rel="icon" href="img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-    <link rel="icon" href="img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-    <link rel="icon" href="img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" href="img/favicons/JakeLogo - 180180.png" sizes="180x180">
+    <link rel="icon" href="img/favicons/JakeLogo - 32x32.png" sizes="32x32" type="image/png">
+    <link rel="icon" href="img/favicons/JakeLogo - 16X16.png" sizes="16x16" type="image/png">
+    <!-- <link rel="icon" href="img/favicons/favicon.ico"> -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -45,7 +45,7 @@
         <div class="navbar navbar-dark bg-danger shadow-sm">
             <div class="container">
                 <a href="#" class="navbar-brand d-flex align-items-center">
-                    <img src="img/favicons/favicon-32x32.png" alt="Pokeball" class="me-2" />
+                    <img src="img/favicons/JakeLogo - 32x32.png" alt="Jake" class="me-2" />
                     &nbsp;<strong>HORA DE AVENTURA</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
