--- a/HoraDeAventura/Views/Home/Details.cshtml
+++ b/HoraDeAventura/Views/Home/Details.cshtml
@@ -1,9 +1,9 @@
+@model DetailsVM
 @{
     ViewData["Title"] = "Personagem";
-    var Categorias = (List<Categoria>)ViewData["Categorias"];
     string Cor(string nome)
     {
-        return Categorias
+        return Model.Categorias
             .Where(t => t.Nome == nome)
             .Select(t => t.Cor)
             .FirstOrDefault();
@@ -12,26 +12,39 @@
         
         <section class="pt-5 container">
 			<div class="row">
-				@*<div class="col text-center">
-					<a href="#" class="btn btn-lg btn-outline-dark">Finn</a>
-				</div>*@
 				<div class="col text-center">
-					<h1 class="fs-1">@Model.Nome</h1>
+					@if (Model.Anterior != null)
+					{
+						<a asp-action="Details" asp-route-id="@Model.Anterior.Id" class="btn btn-lg btn-outline-dark">
+							@Model.Anterior.Id.ToString("00") - @Model.Anterior.Nome
+						</a>
+					}
 				</div>
-				@*<div class="col text-center">
-					<a href="#" class="btn btn-lg btn-outline-dark">BMO</a>
-				</div>*@
+
+				<div class="col text-center">
+					<h1 class="fs-1">@Model.Atual.Nome
+						<span class="fs-2 text-secondary">Nº @Model.Atual.Id.ToString("00")</span>
+					</h1>
+				</div>
+				<div class="col text-center">
+					@if (Model.Proximo != null)
+					{
+						<a asp-action="Details" asp-route-id="@Model.Proximo.Id" class="btn btn-lg btn-outline-dark">
+							@Model.Proximo.Id.ToString("00") - @Model.Proximo.Nome
+						</a>
+					}
+				</div>
 			</div>
 
 			<div class="row mt-3">
 				<div class="col-lg-5 p-0">
-					<img class="img-fluid cursor-pointer" src="@Model.Imagem" alt="@Model.Nome">
+					<img class="img-fluid cursor-pointer" src="@Model.Atual.Imagem" alt="@Model.Atual.Nome">
 				</div>
 				<div class="col-lg-7 fs-5 mt-4">
-					<p class="mb-3"><strong>Descrição:</strong>@Model.Descricao</p>
+					<p class="mb-3"><strong>Descrição:</strong>@Model.Atual.Descricao</p>
 					<p class="fw-bold">Categoria</p>
 					<div class="btn-group">
-                        @foreach (var tipo in Model.Categoria)
+                        @foreach (var tipo in Model.Atual.Categoria)
                         {
 						<a href="#" class="btn btn-lg text-white" style="background-color:@Cor(tipo)">
                             @tipo
