--- a/HoraDeAventura/Views/Home/Index.cshtml
+++ b/HoraDeAventura/Views/Home/Index.cshtml
@@ -16,13 +16,14 @@
                 <div class="col mx-auto">
                     <h1>Hora de Aventura</h1>
                     <div class="group">
-                        <button id="btn-all" class="btn btn-md my-2 text-white bg-dark btn-filter">
+                        <button id="btn-all" class="btn btn-md my-2 text-white bg-dark btn-filter" onclick="filter('all')">
                             Ver Todos
                         </button>
                         @foreach (var Categoria in Categorias)
                         {
-                            <button id="btn-aço" class="btn btn-sm my-2 text-white btn-filter"
-                                style="background-color:@Categoria.Cor">@Categoria.Nome
+                            <button id="btn-@Categoria.Nome" class="btn btn-sm my-2 text-white btn-filter"
+                                style="background-color:@Categoria.Cor" onclick="filter('@Categoria.Nome')">
+                                @Categoria.Nome
                             </button>
                         }
                     </div>
@@ -38,8 +39,8 @@
                 @foreach (var Personagem in Model)
                 {
                     <!-- Card Personagem - Inicio -->
-                    <div class="col" onclick="window.location = '/Home/Details/@Personagem.Nome'">
-                        <div class="card shadow-sm cursor-pointer Personagens Principais" onclick="GetInfo(001)">
+                    <div class="col" onclick="window.location = '/Home/Details/@Personagem.Id'">
+                        <div class="card shadow-sm cursor-pointer Personagens Principais">
                             <img src="@Personagem.Imagem" class="card-img-top" width="100%" height="300" alt="@Personagem.Nome" />
                             <div class="card-body">
                                 <h3 class="card-title">@Personagem.Nome</h3>
@@ -48,7 +49,7 @@
                                         @foreach (var tipo in Personagem.Categoria)
                                         {
                                             <a href="#" class="btn my-2 text-white" 
-                                            style="background-color:@Cor(tipo)">@tipo</a>
+                                            style="background-color:@Cor(tipo)" onclick="filter('@tipo')">@tipo</a>
                                         }
                                     </div>
                                 </div>
@@ -58,7 +59,7 @@
                     <!-- Card personagem - Fim -->
                 }
 
-                    <div id="zeroPersonagens" class="col-lg-12 text-center" hidden>
+                    <div id="Personagem não encontrado" class="col-lg-12 text-center d-none">
                         <h1 class="my-3 text-danger">Nenhum personagem encontrado</h1>
                     </div>
                 </div>
