--- a/HoraDeAventura/Views/Home/Index.cshtml
+++ b/HoraDeAventura/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                         @foreach (var Categoria in Categorias)
                         {
                             <button id="btn-@Categoria.Nome" class="btn btn-sm my-2 text-white btn-filter"
-                                style="background-color:@Categoria.Cor" onclick="filter('@Categoria.Nome')">
+                                style="background-color:@Categoria.Cor" onclick="filter('@Categoria.Nome.Replace(' ', '-')')">
                                 @Categoria.Nome
                             </button>
                         }
@@ -40,7 +40,7 @@
                 {
                     <!-- Card Personagem - Inicio -->
                     <div class="col" onclick="window.location = '/Home/Details/@Personagem.Id'">
-                        <div class="card shadow-sm cursor-pointer Personagens Principais">
+                        <div class="card shadow-sm cursor-pointer @(string.Join('=', Personagem.Categoria).Replace(' ', '-').Replace('=', ' '))">
                             <img src="@Personagem.Imagem" class="card-img-top" width="100%" height="300" alt="@Personagem.Nome" />
                             <div class="card-body">
                                 <h3 class="card-title">@Personagem.Nome</h3>
